--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-  /* background-color: #F5F1F6; */
-  background-image: url("https://www.wallpapertip.com/wmimgs/83-838410_php-html-code-php-lenguaje-de-programacion.jpg");
+   background-color: black;
+ /* background-image: url("https://www.wallpapertip.com/wmimgs/83-838410_php-html-code-php-lenguaje-de-programacion.jpg");*/
 }
 
 .skills{
